# edfest-mcp

./: .gitignore  LICENSE  README.md  edfestcli.py  gmaps.py  main.py  pyproject.toml  test_edfestcli.py
.github/workflows/: test.yml
